Used generic to create views and added CSS style sheet

--- a/mysite/todo/templates/todo/content.html
+++ b/mysite/todo/templates/todo/content.html
@@ -1,3 +1,3 @@
-<h1>{{ items.content }}</h1>
-<p>You have created {{ items.content }} on {{ items.date_created }}</p>
-<p>Please start to do at {{ items.date }}</p>
+<h1>{{ todoitem.content }}</h1>
+<p>You have created {{ todoitem.content }} on {{ todoitem.date_created }}</p>
+<p>Please start to do at {{ todoitem.date }}</p>
