--- a/mysite/todo/templates/todo/todo.html
+++ b/mysite/todo/templates/todo/todo.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'todo/style.css' %}">
+
 <h1>Todo List!</h1>
 
 <ul>
@@ -18,5 +22,7 @@
     <input type="text" name="content" id ="content"><br><br>
     <label for = "date">Time :</label>
     <input type="datetime" name="date" id ="date"><br><br>
-    <input type="submit" value="Add">
+    Details :<br>
+    <textarea name="detail" style="width:25%; height:20%;"></textarea><br><br>
+    <input class="btn" type="submit" value="Add">
 </form>
